[package]
name = "markdown-pad"
version = "0.1.1"
description = "A fast WYSIWYG Markdown editor for Windows."
authors = ["Markdown Pad contributors"]
license = "MIT"
edition = "2021"

[lib]
name = "markdown_pad_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
dirs = "6.0.0"
rfd = "0.15.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.11.5", features = [] }
tauri-plugin-opener = "2.5.0"
thiserror = "2.0"
